@@ -1,4 +1,4 @@
-#	$NetBSD: CHANGES-1.5.4,v 1.1.2.64 2002/10/03 03:36:02 itojun Exp $
+#	$NetBSD: CHANGES-1.5.4,v 1.1.2.65 2002/10/03 05:01:15 itojun Exp $
 
 A complete list of changes from NetBSD 1.5.3 to NetBSD 1.5.4:
 
@@ -1644,3 +1644,7 @@ gnu/dist/sendmail/smrsh/smrsh.c			1.9
 
   Plug smrsh vulnerability, as presented in
   http://www.sendmail.org/smrsh.adv.txt.  Fixes SA#2002-023.
+
+sys/kern/kern_resource.c			1.65-1.66
+
+  Check negative args to set/getrlimit.
